After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 415143 - Cannot read plugin descriptions in preferences dialog
Cannot read plugin descriptions in preferences dialog
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.4.x
Other All
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
: 430382 610497 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2007-03-06 01:26 UTC by Jonh Wendell
Modified: 2013-04-21 14:23 UTC
See Also:
GNOME target: ---
GNOME version: 2.19/2.20


Attachments
Patch to make the preferences dialog resizable. (4.98 KB, patch)
2008-09-30 20:53 UTC, Thomas E Jenkins
none Details | Review

Description Jonh Wendell 2007-03-06 01:26:58 UTC
Bug opened in Ubuntu (http://launchpad.net/bugs/89819):

Repro:
* Start GEdit.
* Edit->Preferences
* Move the mouse pointer to the corner of the preferences window
* Click + drag

Current result:
Nothing

Expected result:
Preferences window should change size.

Note:
This works for other parts of GEdit (like the main window for example). It's a nuisance having to view the plugins tab through a keyhole.
Comment 1 Paolo Borelli 2007-03-11 15:12:08 UTC
I think that not resizable prefs dialog was in the HIG (though I may be wrong), that said the point you make about the plugins list makes sense. We can try to make it resizable, but I am not sure the other tabs resize well.

Long term we should reconsider the idea of splitting the plugins manager to its own dialog
Comment 2 Steve Frécinaux 2007-04-16 17:35:05 UTC
*** Bug 430382 has been marked as a duplicate of this bug. ***
Comment 3 Ray Strode [halfline] 2007-09-18 14:01:02 UTC
there is a downstream fedora bug here:

https://bugzilla.redhat.com/show_bug.cgi?id=292281

Comment 4 Johan Walles 2007-10-17 14:00:17 UTC
(In reply to comment #1)
> I think that not resizable prefs dialog was in the HIG

It's not:
http://developer.gnome.org/projects/gup/hig/2.0/windows-utility.html#preference-windows

The HIG is the make-the-UI-nicer-for-the-users document, not the make-the-UI-easier-to-code document :-).
Comment 5 Steve Frécinaux 2007-10-17 14:07:31 UTC
Having a resizeable or fixed dialog doesn't change anything wrt code complexity.
Comment 6 Thomas E Jenkins 2008-09-30 20:53:06 UTC
Created attachment 119681 [details] [review]
Patch to make the preferences dialog resizable.

Making the contents resize correctly was fairly simple. A couple of changes to preference window creation in gedit-preferences-dialog.c and some changes to the gedit-preferences-dialog.glade file and everything appears to work correctly.

I attached is the patch with those changes.
Comment 7 Wouter Bolsterlee (uws) 2008-10-20 19:33:11 UTC
Confirming. Because of this bug I cannot read plugin descriptions without opening the Info dialog (this is painful).
Comment 8 Allison Karlitskaya (desrt) 2009-04-18 16:52:37 UTC
Yes.  The reason that the window ought to be resizeable is entirely because of the list of plugins:

 - making the window long could mean that you don't have to scroll the list

 - making it wider would allow you to read the description
Comment 9 Robert Roth 2012-07-28 12:39:06 UTC
Some of the latest comments on duplicate bug 61ö497:

 Calum Benson [developer] 2012-05-22 16:15:38 UTC

So, there are a couple of UI guidelines that apply in this situation, though I
don't recall without checking if they're explicitly stated in the HIG:

(a) a window whose content is known in advance should open large enough to show
all of that content, provided that does not make the window unreasonably large.
("Unreasonable" is of course slightly subjective...)

(b) If a window contains an area whose content is or may be scrollable, that
window should be resizable, and resizing should affect the size of the
scrollable area.

I'd say the Preferences window falls under (a), since the current list of
Plugins and their descriptions is known before the window opens. The content of
the Font & Colors tab should also be considered when choosing the initial size
of the dialog, as the content of the list on that tab is also clipped at
present.

It wouldn't hurt to make the window resizable too. But I suspect there's
probably no need for it to be, unless people start coming up with overly-long
plugin/colour scheme descriptions (which should be discouraged). There
shouldn't really be any need to clip a succinct single sentence description,
even when translated into German etc.

 Ignacio Casal Quinteiro (nacho) [gedit developer] 2012-05-23 06:15:44 UTC

Actually now that there are tooltips in the plugins tabs is this really a
problem?
Comment 10 Robert Roth 2012-07-28 12:39:20 UTC
*** Bug 610497 has been marked as a duplicate of this bug. ***
Comment 11 Adam Dingle 2013-04-20 09:51:37 UTC
This has been a significant annoyance for a long time.  I vote to simply make the dialog resizable, in a horizontal direction at least.
Comment 12 Ignacio Casal Quinteiro (nacho) 2013-04-20 10:20:08 UTC
Is this really a problem now that we added the tooltips?
Comment 13 Adam Dingle 2013-04-20 10:51:14 UTC
The tooltips help a tiny bit, but in my opinion the dialog would still be far more pleasant to use if it were resizable.  I understand that preferences dialogs are not generally supposed to be, but I think it's well worth making an exception in this case.

Note that Eye of GNOME's preferences dialog also has a Plugins tab.  That dialog is resizable, and I don't hear too many people complaining about that.  :)

Alternately I suppose we could have separate dialogs for Preferences and Plugins, like in Totem and Rhythmbox; then Plugins could be resizable even if Preferences is not.
Comment 14 Ignacio Casal Quinteiro (nacho) 2013-04-21 14:23:31 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.