Make preferences dialog resizable.

https://bugzilla.gnome.org/show_bug.cgi?id=415143